update
updated: Utils.java
updated: new password option with encryption ( not tested yet )